Fix skill container spacing

--- a/pages/bio-style.css
+++ b/pages/bio-style.css
@@ -245,6 +245,7 @@
   align-items: flex-end;
   box-sizing: border-box;
   position: relative;
+  margin-bottom: -1px;
   z-index: calc(2 + var(--max-competences) - var(--ligne));
 }
 
